# pdf_translator

./: Dockerfile  Dockerfile-dev  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
utils/: gui.py
