[project]
name = "llm-pdf-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "gradio>=5.29.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "openai>=1.79.0",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pyclipper>=1.3.0.post6",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.1",
    "scikit-image>=0.25.2",
    "shapely>=2.1.0",
    "textdistance>=4.6.3",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]
